# holoscend

./: .gitignore  .gitmodules  1
.github/workflows/: build-apk.yml
Android/: build.gradle
Android/app/: build.gradle  proguard-rules.pro
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/app/src/main/java/com/holoscend/chat/: MainActivity.kt
Android/app/src/main/java/com/holoscend/chat/ui/theme/: Color.kt  Theme.kt
Android/app/src/main/res/values/: themes.xml
Android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
